# CloudMeeting_Client

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.py  log.txt  resource.qrc  server2_run.sh  server_run.sh
build-server/: CMakeCache.txt
client/: CMakeLists.txt  resource.qrc
client/include/: screen.h
client/include/configure/: auth_config.h  configure.h  stdtypes.h  user_session.h
client/include/message/audio/: AudioFormatStd.h  AudioInput.h  AudioOutput.h  audiocommon.h
client/include/message/text/: chatmessage.h  mytextedit.h
client/include/message/video/: ImgDisplay.h  cameravideo.h  myvideosurface.h
client/include/network/messageNet/: connection.h  message.h  messagecodec.h  messagehub.h  netheader.h  networkmanager.h  partner.h
client/include/widget/: frameless_window.h  login.h  main_window.h  partner_tile.h  stack_conn_server.h  stack_create_meet.h  stack_join_meet.h  widget.h
client/include/widget/meeting/: meeting_controller.h  meeting_widget.h
client/source/: login.qss  main_window.qss  style.qss  widget.qss
client/src/: main.cpp  screen.cpp
client/src/configure/: user_session.cpp
client/src/message/audio/: AudioInput.cpp  AudioOutput.cpp  audiocommon.cpp
client/src/message/text/: chatmessage.cpp  mytextedit.cpp
client/src/message/video/: ImgDisplay.cpp  cameravideo.cpp  myvideosurface.cpp
client/src/network/messageNet/: connection.cpp  message.cpp  messagecodec.cpp  messagehub.cpp  networkmanager.cpp  partner.cpp
client/src/ui/: login.ui  stack_conn_server.ui  stack_create_meet.ui  stack_join_meet.ui  widget.ui
client/src/widget/: login.cpp  main_window.cpp  partner_tile.cpp  stack_conn_server.cpp  stack_create_meet.cpp  widget.cpp
client/src/widget/meeting/: meeting_controller.cpp  meeting_widget.cpp
doc/html/: _audio_input_8h_source.html  class_audio_format_std.html  class_audio_format_std.js  class_audio_input-members.html  class_audio_input.html  class_buffer.html  class_camera_video-members.html  class_completer-members.html  class_connection.js  class_frameless_window-members.html  class_frameless_window.html  class_frameless_window.js  class_message_codec.html  class_message_codec.js  class_message_codec_1_1_wire_stream_parser.html  class_message_hub.js  class_message_queue-members.html  class_message_queue.html  class_my_text_edit-members.html  class_widget-members.html  classlogin-members.html  classmain__window.html  classmeeting_1_1_room_manager-members.html  classmeeting_1_1_room_manager.html  classmeeting_1_1_room_manager.js  classnetwork_1_1_connection-members.html  classnetwork_1_1_server-members.html  classprotocol_1_1_codec.html  classservice_1_1_meeting_service-members.html  classstack__conn__server.html  classstack__create__meet.html  dir_0346015b1db974678e6812415440d6e3.html  dir_03c7395d9a5fb9b6bbf9ca09ba785626.html  dir_14aa8b109f07a371059b1d93e6b46987.html  dir_3b14a9014c7f6020174a97683159b7b8.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_444c5a649a97ae0fbc14ad0d213a8349.js  dir_5c23080e296bbe846f4ed2d01d7b595d.html  dir_8482ed0abb8988ecd22297f038c29c1e.html  dir_b1ef0f2cacbcb136b53fa4683ffeb467.html  (+34 more)
docs/html/: _audio_format_std_8h_source.html  _audio_output_8h_source.html  _img_display_8h_source.html  annotated.html  annotated_dup.js  audiocommon_8h_source.html  buffer_8h_source.html  cameravideo_8h_source.html  chatmessage_8h_source.html  class_audio_format_std-members.html  class_audio_output-members.html  class_audio_output.html  class_buffer-members.html  class_camera_video.html  class_chat_message-members.html  class_chat_message.html  class_chat_message.js  class_completer.html  class_connection-members.html  class_connection.html  class_img_display-members.html  class_img_display.html  class_img_display.js  class_message_codec-members.html  class_message_codec_1_1_wire_stream_parser-members.html  class_message_hub-members.html  class_message_hub.html  class_my_text_edit.html  class_my_video_surface-members.html  class_my_video_surface.html  class_network_manager-members.html  class_network_manager.html  class_partner-members.html  class_partner.html  class_screen-members.html  class_screen.html  class_widget.html  classes.html  classlogin.html  classmain__window-members.html  (+70 more)
include/: AudioFormatStd.h  main_window.h  mytcpsocket.h  myvideosurface.h  netheader.h  partner.h  recvsolve.h  sendimg.h  sendtext.h  widget.h
logger/: Logger.cpp  Logger.h
server/: CMakeLists.txt
server/include/config/: server_config.h
server/include/meeting/: participant.h  room.h  room_manager.h
server/include/network/: buffer.h  connection.h  server.h
server/include/protocol/: codec.h  message_type.h  packet.h
server/include/service/: meeting_service.h
server/src/: main.cpp
server/src/meeting/: room.cpp  room_manager.cpp
server/src/network/: buffer.cpp  connection.cpp  server.cpp
server/src/protocol/: codec.cpp  message_type.cpp
server/src/service/: meeting_service.cpp
server2/: CMakeLists.txt
server2/include/config/: auth_server_config.h
server2/include/db/: mysql_client.h
server2/include/http/: http_server.h  http_session.h
server2/include/model/: login_result.h  user_info.h
server2/include/repository/: user_repository.h
server2/include/service/: auth_service.h
server2/include/util/: json_helper.h  password_hasher.h
server2/sql/: schema.sql  seed_demo_user.sql
server2/src/: main.cpp
server2/src/db/: mysql_client.cpp
server2/src/http/: http_server.cpp  http_session.cpp
server2/src/repository/: user_repository.cpp
server2/src/service/: auth_service.cpp
server2/src/util/: json_helper.cpp  password_hasher.cpp
source/: login.qss  main_window.qss  style.qss
src/: AudioFormatStd.cpp  AudioInput.cpp  AudioOutput.cpp  audiocommon.cpp  chatmessage.cpp  joinmeeting.cpp  login.cpp  login.ui  main.cpp  main_window.cpp  main_window.ui  mytcpsocket.cpp  mytextedit.cpp  myvideosurface.cpp  netheader.cpp  partner.cpp  recvsolve.cpp  screen.cpp  selectserver.ui  sendimg.cpp  sendtext.cpp  widget.cpp  widget.ui  widget.ui.autosave
(+131 files in other folders)
